<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large"
        android:orientation="vertical"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/numGiorni_crea_scheda_dialog"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:text="Numero di giorni"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_large"/>

        <NumberPicker
                android:id="@+id/numGiorni_picker_crea_scheda_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/tipologia_crea_scheda_dialog"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="@string/tipologia"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_large"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <RadioGroup
                    android:id="@+id/tipologia_radio_group_crea_scheda_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/radio_forza_crea_scheda_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forza"/>

                <RadioButton
                        android:id="@+id/radio_massa_crea_scheda_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/massa"/>

                <RadioButton
                        android:id="@+id/radio_definizione_crea_scheda_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/definizione"/>

                <RadioButton
                        android:id="@+id/radio_nonSpecificare_crea_scheda_dialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_specificare"
                        android:checked="true"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <EditText
            android:id="@+id/commento_crea_scheda_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commento"
            android:inputType="text"
            android:maxLength="150"
            android:layout_gravity="start"
            android:layout_margin="@dimen/spacing_medium"/>


</LinearLayout>