<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

            <EditText
                    android:hint="@string/nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nomeEsercizio_editText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="20dp"/>

            <EditText
                    android:hint="@string/serie"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serieEsercizio_editText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nomeEsercizio_editText"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="20dp"/>

            <EditText
                    android:hint="@string/ripetizioni"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ripetizioniEsercizio_editText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/serieEsercizio_editText"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="20dp"/>

            <EditText
                    android:hint="@string/recupero"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recuperoEsercizio_editText"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ripetizioniEsercizio_editText"
                    android:layout_margin="8dp"
                    android:layout_marginStart="20dp"/>

            <EditText
                    android:hint="@string/commento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/commentoEsercizio_editText"
                    app:layout_constraintTop_toBottomOf="@id/nomeEsercizio_editText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="8dp"/>

            <Button
                    android:id="@+id/elimina_esercizio_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="8dp"
                    android:background="@drawable/ic_delete_24px"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>