<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small">

            <TextView
                    android:text="@string/nome"
                    android:textSize="@dimen/text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nome_richiedente_textView"
                    app:layout_constraintStart_toEndOf="@id/richiedente_imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="@dimen/spacing_large"/>
            <TextView
                    android:text="@string/cognome"
                    android:textSize="@dimen/text_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cognome_richiedente_textView"
                    app:layout_constraintStart_toEndOf="@id/nome_richiedente_textView"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="@dimen/spacing_large"/>


            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/tipologia_imageView"
                    app:layout_constraintTop_toBottomOf="@id/tipologia_textView"
                    app:layout_constraintStart_toStartOf="@id/tipologia_textView"
                    app:layout_constraintEnd_toEndOf="@id/tipologia_textView"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/tipologia_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:layout_marginStart="@dimen/spacing_xlarge"
                    android:text="@string/tipologia"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/days_intest_textView"
                    app:layout_constraintTop_toBottomOf="@id/data_textView" />

            <TextView
                    android:id="@+id/days_intest_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:text="@string/giorni"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/data_textView" />

            <TextView
                    android:id="@+id/numGiorni_textView"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giorni"
                    app:layout_constraintTop_toBottomOf="@id/days_intest_textView"
                    app:layout_constraintStart_toStartOf="@id/days_intest_textView"
                    app:layout_constraintEnd_toEndOf="@id/days_intest_textView"/>


            <TextView
                    android:id="@+id/data_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textColor="@color/grey_20"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintStart_toStartOf="@id/nome_richiedente_textView"
                    app:layout_constraintTop_toBottomOf="@id/nome_richiedente_textView"/>

            <Button
                    android:text="@string/three_dots_vertical"
                    android:background="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/threeDots_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="@dimen/spacing_small"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/richiedente_imageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@color/grey_20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />


            <TextView
                    android:id="@+id/inviaScheda_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invia"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tipologia_textView"
                    android:textSize="@dimen/text_xmedium"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="@dimen/spacing_large"
            />

            <TextView
                    android:text="@string/commento"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/commento_textView"
                    app:layout_constraintStart_toStartOf="@id/numGiorni_textView"
                    app:layout_constraintTop_toBottomOf="@id/numGiorni_textView"
                    android:layout_margin="@dimen/spacing_large"
                    android:textStyle="italic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>