<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.fragments.RegisterFragment"
             android:id="@+id/fragment_register">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/register_big_intest_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="MyFitness"
                android:textSize="80sp"
                android:layout_margin="@dimen/spacing_large"
                android:layout_marginTop="44dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/register_cardView"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/register_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/spacing_large">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:id="@+id/title_register_editText"
                        android:layout_margin="@dimen/spacing_medium"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="40sp"
                        android:textColor="@color/colorPrimary"/>

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/mail"
                        android:ems="10"
                        android:id="@+id/mail_register_editText"
                        android:layout_margin="@dimen/spacing_medium"/>

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/username"
                        android:ems="10"
                        android:id="@+id/username_register_editText"
                        android:layout_margin="@dimen/spacing_medium"/>

                <EditText
                        android:hint="@string/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/password_register_editText"
                        android:layout_margin="@dimen/spacing_medium"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
                android:id="@+id/continua_registration_button"
                android:text="Prosegui"
                android:drawableEnd="@drawable/ic_ic_arrow_forward_24px"
                android:drawableTint="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_cardView"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_margin="@dimen/spacing_large"
                android:padding="@dimen/spacing_large"
                />

        <TextView
                android:text="@string/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_to_login_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continua_registration_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/spacing_medium"/>
        <Button
                android:text="@string/test_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/test_skip_register_button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.501" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>